versioned_docs/version-5.x/concept/useValue.mdx
---
sidebar_position: 1
id: useValue
title: useValue
---
The `useValue()` function is a powerful hook designed to manage and animate values within your React components without triggering unnecessary re-renders. It behaves similarly to a [ref](https://react.dev/reference/react/useRef), holding the current animation state internally.

This hook returns a tuple: `[value, setValue]`.
- **value**: The current animated state, which you can directly apply to JSX styles or component props.
- **setValue**: A function to update the `value`, which can trigger a smooth animation when used with motion modifiers.

## Basic Usage

The primary use case for `useValue()` is to animate properties. For instance, to animate an element's width:

import PrimitveExample from "@site/src/examples/strings/v5.x.x/modifier/withSpring/GetStartedExample"
import ArrayExample from "@site/src/examples/strings/v5.x.x/modifier/withSpring/ArrayExample"
import ObjectExample from "@site/src/examples/strings/v5.x.x/modifier/withSpring/ObjectExample"

import SandPack from "@site/src/components/SandPack"

<SandPack version={{
   reactAnimate: '5.0.0'
}}
files={{
  "App.tsx": PrimitveExample
}}
/>

### 

:::info Immediate vs. Animated Updates
When you assign a raw value (e.g., `setWidth(200)`), the property changes **immediately** without animation. To achieve a smooth transition, you must wrap the target value in a [animation modifier](../animation-modifier/overview) like ([withTiming](../animation-modifier/withTiming) or [withSpring](../animation-modifier/withSpring)).
:::

***

## Usage 
### 1. Primitive Values (Number & String)
For primitive data types such as numbers or strings, `useValue` manages a single animated value directly.
##### Syntax
```jsx
const [value, setValue] = useValue(initialValue: number | string);
```
<details>
  <summary>View example</summary>
  <SandPack version={{
    reactAnimate: '5.0.0'
  }}
  files={{
    "App.tsx": PrimitveExample
  }}
  />
</details>

### 2. Array of Primitives
You can also animate an array of values. The hook stores the array and you update it similarly:
##### Syntax
```jsx
const [arr, setArr] = useValue(initialArray: number[]);
```
<details>
  <summary>View example</summary>
  <SandPack version={{
    reactAnimate: '5.0.0'
  }}
  files={{
    "App.tsx": ArrayExample
  }}
  />
</details>

### 3. Object of Primitives
You can also initialize useValue with an object whose fields are numbers or strings. The hook returns a matching object
##### Syntax
```jsx
const [obj, setObj] = useValue(initialObject: { [key: string]: number | string });
```
<details>
  <summary>View example</summary>
   <SandPack version={{
    reactAnimate: '5.0.0'
  }}
  files={{
    "App.tsx": ObjectExample
  }}
  />
</details>
